--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -36,6 +36,7 @@
 @import "./pages/grn.scss";
 @import "./pages/tax-othercost.scss";
 @import "./pages/receipt.scss";
+@import "./pages/error.scss";
 
 ::ng-deep .mat-horizontal-stepper-header {
   pointer-events: none !important;
