--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -1,14 +1,14 @@
-<form [formGroup]="projectDetails" (ngSubmit)="submit()" *ngIf="!showResponsiveDesign">
+<form [formGroup]="projectDetails" (ngSubmit)="submit()" *ngIf="!showResponsiveDesign && projectDetails">
   <div class="row">
     <span class="col-xs-6">
       <span class="m-r-35 p-l-15">
         <span>
-          <mat-form-field class="border-input">
+          <mat-form-field class="border-input p-r-5">
             <input matInput type="string" formControlName="orderNo" placeholder="P.O. No." class="m-r-5" />
-            <small *ngIf="projectDetails.controls['orderNo'].hasError('required') && projectDetails.controls['orderNo'].touched" class="form-error-msg">
-              P.O. No. is required
-            </small>
           </mat-form-field>
+          <span *ngIf="projectDetails.controls['orderNo'].hasError('required') && projectDetails.controls['orderNo'].touched" class="form-error-msg">
+            <app-error-message msg="P.O. No. is required"></app-error-message>
+          </span>
         </span>
       </span>
     </span>
@@ -301,9 +301,7 @@
         <span class="text-size-light"> Street Address: </span>
         <span class="text-very-light word-break-all"> {{ cardData.billingAddress.addressLine1 }} {{ cardData.billingAddress.addressLine2 }}</span>
         <span *ngIf="mode === 'edit'">
-          <a href="javascript:void(0)" (click)="openaddressDialog('projectBillingAddressId', cardData.projectId)"
-            ><i class="material-icons main-color fontsize-14-px"> edit </i></a
-          ></span
+          <a href="javascript:void(0)" (click)="openaddressDialog('projectBillingAddressId', cardData.projectId)"><i class="material-icons main-color fontsize-14-px"> edit </i></a></span
         >
       </div>
 
@@ -346,9 +344,7 @@
         <span class="text-size-light"> Street Address: </span>
         <span class="text-very-light word-break-all">{{ cardData.supplierAddress.addressLine1 }} {{ cardData.supplierAddress.addressLine2 }}</span>
         <span *ngIf="mode === 'edit'">
-          <a href="javascript:void(0)" (click)="openaddressDialog('supplierAddressId', cardData.supplierAddress.supplierId)"
-            ><i class="material-icons main-color fontsize-14-px"> edit </i></a
-          >
+          <a href="javascript:void(0)" (click)="openaddressDialog('supplierAddressId', cardData.supplierAddress.supplierId)"><i class="material-icons main-color fontsize-14-px"> edit </i></a>
         </span>
       </div>
 
